--- a/app/views/doctors/_patients.html.erb
+++ b/app/views/doctors/_patients.html.erb
@@ -1,7 +1,10 @@
 <section class="patients">
   <ul>
     <% doctor.patients.each do |patient| %>
-      <li><%= patient.name %></li>
+      <div id="patient-<%= patient.id %>">
+        <li><%= patient.name %>
+        <%= button_to "Remove Patient",  doctor_patient_path(patient.id, doctor.id), method: :delete %></li>
+      </div>
     <% end %>
   </ul>
 </section>
